Task5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: non-admin-api-allow
  namespace: propdevelopment
spec:
  podSelector:
    matchLabels:
      role: admin-label
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: admin-front-end-app
  egress:
    - to:
      - podSelector:
          matchLabels:
            role: front-end
